--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -46,3 +46,15 @@ jobs:
       - uses: actions/checkout@v3
       - name: Lint code with clippy
         run: cargo clippy
+
+  publish-ability:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check that it will publish to crates
+        run: |
+          cargo metadata --offline --format-version 1 --no-deps | jq -r ".workspace_members[]" | while read -r _n _v pathInfo ; do
+            cd ${pathInfo:13:-1}
+            pwd
+            cargo publish --dry-run
+          done
+        shell: bash
