--- a/parser/fuzz/Cargo.toml
+++ b/parser/fuzz/Cargo.toml
@@ -7,7 +7,12 @@
   [package.metadata]
     cargo-fuzz = true
 
+[build-dependencies]
+  reqwest = { version = "0.11.14", features = ["blocking"] }
+
 [dependencies]
+  boa_ast = { git = "https://github.com/boa-dev/boa.git", features = ["arbitrary"] }
+  boa_interner = { git = "https://github.com/boa-dev/boa.git", features = ["arbitrary"] }
   libfuzzer-sys     = "0.4"
   pretty_assertions = "1.3.0"
 
@@ -24,5 +29,11 @@
 [[bin]]
   name = "statements"
   path = "fuzz_targets/statements.rs"
+  test = false
+  doc  = false
+
+[[bin]]
+  name = "structured"
+  path = "fuzz_targets/structured.rs"
   test = false
   doc  = false
