--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -38,6 +38,24 @@ jobs:
       - uses: actions/checkout@v3
       - name: Run all tests
         run: cargo test --workspace --verbose --all-features
+  
+  fuzzing:
+    needs: validity
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Install latest nightly
+        uses: actions-rs/toolchain@v1
+        with:
+          profile: minimal
+          toolchain: nightly
+      - name: Install cargo-fuzz
+        run: cargo install cargo-fuzz
+      - name: Run fuzzing
+        run: | 
+          cargo fuzz run statements
+          cargo fuzz run structured
+        working-directory: parser/fuzz
 
   clippy:
     needs: validity
