--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -44,11 +44,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - name: Install latest nightly
-        uses: actions-rs/toolchain@v1
-        with:
-          profile: minimal
-          toolchain: nightly
+      - name: Install latest nightly and set it as default
+        run: |
+          rustup install nightly
+          rustup default nightly
       - name: Install cargo-fuzz
         run: cargo install cargo-fuzz
       - name: Run fuzzing
