Rename fuzzers to `module_roundtrip_naive` and `module_roundtrip_structured`
This also uses the timeout commands that VTCAKAVSMoACE recommended for CI

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -38,7 +38,7 @@ jobs:
       - uses: actions/checkout@v3
       - name: Run all tests
         run: cargo test --workspace --verbose --all-features
-  
+
   fuzzing:
     needs: validity
     runs-on: ubuntu-latest
@@ -51,9 +51,9 @@ jobs:
       - name: Install cargo-fuzz
         run: cargo install cargo-fuzz
       - name: Run fuzzing
-        run: | 
-          cargo fuzz run statements
-          cargo fuzz run structured
+        run: |
+          cargo fuzz run -s none module_roundtrip_naive -- -timeout=10 -max_total_time=120 -use_value_profile=1 || true
+          cargo fuzz run -s none module_roundtrip_structured -- -timeout=10 -max_total_time=120 -use_value_profile=1 || true
         working-directory: parser/fuzz
 
   clippy:
