--- a/parser/Cargo.toml
+++ b/parser/Cargo.toml
@@ -8,13 +8,14 @@ license = "MIT"
 repository = "https://github.com/kaleidawave/ezno"
 homepage = "https://kaleidawave.github.io/posts/introducing-ezno/"
 
+# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+
 [features]
 # TODO these shouldn't be default
-default = ["self-rust-tokenize", "extras"]
+default = ["self-rust-tokenize", "extras", "codespan-reporting"]
 self-rust-tokenize = ["dep:self-rust-tokenize", "source-map/self-rust-tokenize"]
+codespan-reporting = ["source-map/codespan-reporting"]
 extras = []
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 visitable-derive = { path = "./visitable-derive", version = "0.0.1", package = "ezno-parser-visitable-derive" }
@@ -26,22 +27,28 @@ derive-debug-extras = { version = "0.2.2", features = [
 derive-partial-eq-extras = "0.1.2"
 derive-enum-from-into = "0.1.1"
 
-# TODO needs buffered for WASM
-tokenizer-lib = { version = "1.5.0", features = [
-    "parallel",
-], default_features = false }
-
 temporary-annex = "0.1.0"
 iterator-endiate = "0.1.0"
 
 enum_variant_type = "0.3.1"
 enum-variants-strings = "0.2"
 
-source-map = { version = "0.11.3", features = [
+source-map = { version = "0.12", features = [
     "span-serialize",
     "self-rust-tokenize",
 ] }
 self-rust-tokenize = { version = "0.3.3", optional = true }
+
+# Needs buffered and not parralel for WASM
+[target.'cfg(target_family = "wasm")'.dependencies]
+tokenizer-lib = { version = "1.5.0", features = [
+    "buffered",
+], default_features = false }
+
+[target.'cfg(not(target_family = "wasm"))'.dependencies]
+tokenizer-lib = { version = "1.5.0", features = [
+    "parallel",
+], default_features = false }
 
 [dev-dependencies]
 match_deref = "0.1.1"
