--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,6 @@
 .vscode
 .env
 /checker/examples
-src/js-cli/**.wasm
-src/js-cli/**.d.ts
-src/js-cli/ezno.js
+src/js-cli-and-library/**.wasm
+src/js-cli-and-library/**.d.ts
+src/js-cli-and-library/ezno.js
