--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ categories = ["compilers"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [lib]
+name = "ezno_lib"
 path = "src/lib.rs"
 # cdylib is for WASM
 crate-type = ["cdylib", "rlib"]
