--- a/parser/Cargo.toml
+++ b/parser/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 license = "MIT"
 repository = "https://github.com/kaleidawave/ezno"
 homepage = "https://kaleidawave.github.io/posts/introducing-ezno/"
+categories = ["parser-implementations"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
