Flat plug-in source code

--- a/src/js-based-plugin/package.json
+++ b/src/js-based-plugin/package.json
@@ -38,5 +38,15 @@
 	},
 	"scripts": {
 		"build": "unbuild"
+	},
+	"build": {
+		"entries": [{
+			"builder": "rollup",
+			"input": "./index"
+		}],
+		"rollup": {
+			"emitCJS": true,
+			"commonjs": true
+		}
 	}
 }
