--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,6 @@ dist
 .vscode
 .env
 /checker/examples
-src/js-cli-and-library/**.wasm
-src/js-cli-and-library/**.d.ts
-src/js-cli-and-library/ezno_lib.js
+build
 node_modules
+/TODO.txt
