--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,6 +41,7 @@ enum-variants-strings = "0.2.2"
 wasm-bindgen = "0.2"
 serde = { version = "1.0", features = ["derive"] }
 serde-wasm-bindgen = "0.5.0"
+js-sys = "0.3"
 
 [target.'cfg(not(target_family = "wasm"))'.dependencies]
 multiline-term-input = "0.1.0"
