--- a/src/js-cli-and-library/package.json
+++ b/src/js-cli-and-library/package.json
@@ -6,20 +6,26 @@
 	"repository": "https://github.com/kaleidawave/ezno",
 	"main": "./dist/index.cjs",
 	"module": "./dist/index.mjs",
-	"types": "./ezno.d.ts",
+	"types": "./build/ezno.d.ts",
+	"type": "module",
 	"exports": {
 		".": {
-		  "require": "./dist/index.cjs",
-		  "import": "./dist/index.mjs",
-		  "types": "./ezno.d.ts"
+			"require": "./dist/index.cjs",
+			"import": "./dist/index.mjs",
+			"types": "./ezno.d.ts"
+		},
+		"./initialized": {
+			"require": "./dist/initilized.cjs",
+			"import": "./dist/initilized.mjs"
 		}
 	},
 	"scripts": {
-		"clean": "rm ezno_lib.* && rm ezno_lib_bg.*",
-		"build": "cargo build --lib --target wasm32-unknown-unknown && npm run bind && unbuild",
-		"bind": "wasm-bindgen --out-dir . --target nodejs ../../target/wasm32-unknown-unknown/debug/ezno_lib.wasm",
-		"build-release": "cargo build --lib --release --target wasm32-unknown-unknown && npm run bind-release",
-		"bind-release": "wasm-bindgen --out-dir . --target nodejs ../../target/wasm32-unknown-unknown/release/ezno_lib.wasm"
+		"clean": "rm ezno_lib.* && rm ezno_lib_bg.* && rmdir dist",
+		"build": "cargo build --lib --target wasm32-unknown-unknown && npm run bind && npm run build-js",
+		"build-release": "cargo build --lib --release --target wasm32-unknown-unknown && npm run bind-release && npm run build-js",
+		"bind": "wasm-bindgen --out-dir build --target web ../../target/wasm32-unknown-unknown/debug/ezno_lib.wasm",
+		"bind-release": "wasm-bindgen --out-dir build --target web ../../target/wasm32-unknown-unknown/release/ezno_lib.wasm",
+		"build-js": "unbuild && cp ./build/ezno_lib_bg.wasm dist/shared"
 	},
 	"keywords": [
 		"typescript",
@@ -28,12 +34,10 @@
 		"compiler"
 	],
 	"files": [
-		"dist",
-		"cli.js",
-		"ezno.d.ts"
+		"dist"
 	],
 	"bin": {
-		"ezno": "./cli.js"
+		"ezno": "./dist/cli.cjs"
 	},
 	"author": {
 		"name": "Ben",
@@ -45,11 +49,19 @@
 		"url": "https://github.com/sponsors/kaleidawave"
 	},
 	"build": {
-	 	"failOnWarn": false,
+		"failOnWarn": false,
 		"entries": [
 			{
 				"builder": "rollup",
-				"input": "./index"
+				"input": "./src/index"
+			},
+			{
+				"builder": "rollup",
+				"input": "./src/initialized"
+			},
+			{
+				"builder": "rollup",
+				"input": "./src/cli"
 			}
 		],
 		"rollup": {
