--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -72,15 +72,30 @@ jobs:
       - uses: brndnmtthws/rust-action-cargo-binstall@v1
         with:
           packages: wasm-bindgen-cli
+      - uses: denoland/setup-deno@v1
+        with:
+          deno-version: v1.x
+
       - name: Build
         run: |
           rustup target add wasm32-unknown-unknown
-          npm install
+          npm ci
           npm run build
         working-directory: src/js-cli-and-library
         shell: bash
-      - name: Test
-        run: node test.mjs
+
+      - name: Test modules
+        run: |
+          node test.mjs
+          deno run -A test.mjs
+          node test.cjs
+        working-directory: src/js-cli-and-library
+        shell: bash
+
+      - name: Check CLI works
+        run: |
+          node .\dist\cli.cjs info
+          deno run -A .\dist\cli.mjs info
         working-directory: src/js-cli-and-library
         shell: bash
 
