--- a/src/js-cli-and-library/package.json
+++ b/src/js-cli-and-library/package.json
@@ -20,7 +20,7 @@
 		}
 	},
 	"scripts": {
-		"clean": "rm ezno_lib.* && rm ezno_lib_bg.* && rmdir dist",
+		"clean": "rmdir dist && rmdir build",
 		"build": "cargo build --lib --target wasm32-unknown-unknown && npm run bind && npm run build-js",
 		"build-release": "cargo build --lib --release --target wasm32-unknown-unknown && npm run bind-release && npm run build-js",
 		"bind": "wasm-bindgen --out-dir build --target web ../../target/wasm32-unknown-unknown/debug/ezno_lib.wasm",
