Fix a few CI things

--- a/.github/workflows/performance-and-size.yml
+++ b/.github/workflows/performance-and-size.yml
@@ -13,6 +13,7 @@ jobs:
   hyperfine:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v3
       - uses: actions/cache@v3
         with:
           path: |
@@ -29,7 +30,6 @@ jobs:
 
       - name: Build Ezno
         run: cargo build --release
-        working-directory: ezno
         env:
           CARGO_PROFILE_RELEASE_DEBUG: true
 
@@ -37,9 +37,7 @@ jobs:
         run: |
           curl -O https://gist.githubusercontent.com/kaleidawave/9554eb0ec0a2efc5727a3227fe997c8d/raw/6445ec1b802b52081e6dbb9c3a99e6de3f33dcfa/example.js
           hyperfine './target/release/ezno build example.js'
-        working-directory: ezno
 
       - name: Print (linux) binary size
         run: |
           echo "Binary is $(stat -c %s ./target/release/ezno) bytes"
-        working-directory: ezno
