Fix wasm-bindgen version

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -93,6 +93,7 @@ jobs:
         with:
           path: ${{ env.CACHE_PATHS }}
           key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
+          
       - uses: dorny/paths-filter@v2
         id: changes
         with:
@@ -138,7 +139,7 @@ jobs:
           key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
       - uses: brndnmtthws/rust-action-cargo-binstall@v1
         with:
-          packages: wasm-bindgen-cli
+          packages: wasm-bindgen-cli@0.2.86
       - uses: denoland/setup-deno@v1
         with:
           deno-version: v1.x
