--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,8 +27,9 @@ name = "ezno"
 path = "src/main.rs"
 
 [dependencies]
-parser = { path = "./parser", version = "0.0.3", package = "ezno-parser" }
-checker = { path = "./checker", version = "0.0.2", package = "ezno-checker" }
+# parser = { path = "./parser", version = "0.0.3", package = "ezno-parser" }
+checker = { path = "./checker", version = "0.0.4", package = "ezno-checker" }
+# , features = ["ezno-parser"] }
 # ezno-web-framework = { path = "./plugins/web" }
 
 console = "0.14.1"
@@ -37,8 +38,15 @@ argh = "0.1.6"
 base64 = "0.13.0"
 enum-variants-strings = "0.2.2"
 
+[dependencies.parser]
+git = "https://github.com/kaleidawave/ezno.git"
+branch = "parser-fixes2"
+version = "0.0.3"
+features = ["extras"]
+package = "ezno-parser"
+
 [target.'cfg(target_family = "wasm")'.dependencies]
-wasm-bindgen = "0.2"
+wasm-bindgen = "0.2.86"
 serde = { version = "1.0", features = ["derive"] }
 serde-wasm-bindgen = "0.5.0"
 js-sys = "0.3"
