--- a/parser/fuzz/Cargo.toml
+++ b/parser/fuzz/Cargo.toml
@@ -20,6 +20,7 @@ boa_interner = { git = "https://github.com/boa-dev/boa.git", features = [
 ] }
 libfuzzer-sys = "0.4"
 pretty_assertions = "1.3.0"
+proc-macro2 = "1.0.66"
 
 [dependencies.ezno-parser]
 path = ".."
